Spring配置多数据源

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.datasource.druid.database1.url=jdbc:mysql://192.168.7.104:3306/qqsk?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.druid.database1.username=jiebai
+spring.datasource.druid.database1.password=123456
+spring.datasource.druid.database1.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.druid.database1.initialSize=5
+spring.datasource.druid.database1.minIdle=5
+spring.datasource.druid.database1.maxActive=20
+spring.datasource.druid.database1.maxWait=60000
 
+
+spring.datasource.druid.database2.url=jdbc:mysql://192.168.7.104:3306/qqsk_manager?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.druid.database2.username=jiebai
+spring.datasource.druid.database2.password=123456
+spring.datasource.druid.database2.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.druid.database2.initialSize=5
+spring.datasource.druid.database2.minIdle=5
+spring.datasource.druid.database2.maxActive=20
+spring.datasource.druid.database2.maxWait=60000
