--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,31 @@ spring.datasource.druid.database2.initialSize=5
 spring.datasource.druid.database2.minIdle=5
 spring.datasource.druid.database2.maxActive=20
 spring.datasource.druid.database2.maxWait=60000
+
+
+nacos.server-address=nacos.qqsk.com
+nacos.port=8848
+
+## nacos config
+nacos.config.server-addr=${nacos.server-address}:${nacos.port}
+
+## Dubbo Registry
+dubbo.registry.address=nacos://${nacos.server-address}:${nacos.port}
+
+# Spring boot application
+spring.application.name=qqsk-member-provider
+# Base packages to scan Dubbo Component: @org.apache.dubbo.config.annotation.Service
+dubbo.scan.base-packages=com.jiebai.qqsk.member.provider
+
+# Dubbo Protocol
+dubbo.protocol.name=dubbo
+## Random port
+dubbo.protocol.port=-1
+
+provider.member.version = 0927_1.0.0
+
+#spring.redis.host=192.168.7.101
+#spring.redis.port=6379
+#spring.redis.jedis.pool.max-active=8
+#spring.redis.jedis.pool.max-idle=10
+#spring.redis.jedis.pool.min-idle=8
