--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,24 @@
+nacos.server-address=nacos.qqsk.com
+nacos.port=8848
+
+## nacos config
+nacos.config.server-addr=${nacos.server-address}:${nacos.port}
+
+## Dubbo Registry
+dubbo.registry.address=nacos://${nacos.server-address}:${nacos.port}
+
+# Spring boot application
+spring.application.name=qqsk-member-provider
+# Base packages to scan Dubbo Component: @org.apache.dubbo.config.annotation.Service
+dubbo.scan.base-packages=com.jdk_source_code.demo.remote
+
+# Dubbo Protocol
+dubbo.protocol.name=dubbo
+## Random port
+dubbo.protocol.port=-1
+
+provider.member.version = 0927_1.0.0
+
 spring.datasource.druid.database1.url=jdbc:mysql://192.168.7.104:3306/qqsk?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.druid.database1.username=jiebai
 spring.datasource.druid.database1.password=123456
@@ -16,28 +37,6 @@ spring.datasource.druid.database2.initialSize=5
 spring.datasource.druid.database2.minIdle=5
 spring.datasource.druid.database2.maxActive=20
 spring.datasource.druid.database2.maxWait=60000
-
-
-nacos.server-address=nacos.qqsk.com
-nacos.port=8848
-
-## nacos config
-nacos.config.server-addr=${nacos.server-address}:${nacos.port}
-
-## Dubbo Registry
-dubbo.registry.address=nacos://${nacos.server-address}:${nacos.port}
-
-# Spring boot application
-spring.application.name=qqsk-member-provider
-# Base packages to scan Dubbo Component: @org.apache.dubbo.config.annotation.Service
-dubbo.scan.base-packages=com.jiebai.qqsk.member.provider
-
-# Dubbo Protocol
-dubbo.protocol.name=dubbo
-## Random port
-dubbo.protocol.port=-1
-
-provider.member.version = 0927_1.0.0
 
 #spring.redis.host=192.168.7.101
 #spring.redis.port=6379
