--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,8 @@ spring.datasource.druid.database2.minIdle=5
 spring.datasource.druid.database2.maxActive=20
 spring.datasource.druid.database2.maxWait=60000
 
-#spring.redis.host=192.168.7.101
-#spring.redis.port=6379
-#spring.redis.jedis.pool.max-active=8
-#spring.redis.jedis.pool.max-idle=10
-#spring.redis.jedis.pool.min-idle=8
+spring.redis.host=192.168.7.101
+spring.redis.port=6379
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-idle=10
+spring.redis.jedis.pool.min-idle=8
